test/fail/lexer/syntaxAction/test.twge
block my_block {
    actions {
        __metadata__
    }
}